# srp3

./: .gitignore  AUTHORS  BUGS  BUGS-SQUASHED  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.common  README  README-3.0  README.dbus  TODO  configure.ac  python-test  sr.py  sr_package2.py  srp  srp.8  srp.texinfo
dev-3.0/: Makefile
dev-3.0/srp/: README  builder.py  config.py  files.py  installer.py  main.py  notes.py  owneroverride.py  package.py  prepostlib.py  testing.py  utils.py  work.py
dev-3.0/srp/deprecated/: __init__.py  sr.py  sr_package2.py  utils.py
dev-3.0/srp/features/: features.py  init.py  test.py  toc.py  trackfiles.py
dev-3.0/v3/: foo.cpp
dev-3.0/v3/SRP_files/: NOTES  NOTES-dev  NOTES-doc  foo  go-dev  overrides
dev-db/: sr.py  sr_db.py  utils.py
dev-db/installed/: config-skel_-_config-skel-1.2_-_1
dev-db/installed/srp/srp-2.2.4/: DEPS_PROG-2  FILES-2  NOTES-2
dev-threads/: pawns.py  status.py  test  test.py
examples/: Makefile  Makefile.am
examples/bar-3.0/: Makefile.am  configure.ac  srp-example-bar.notes
examples/bar-3.0/docs/: Makefile.am  docs2
examples/bar-3.0/headers/: Makefile.am
examples/bar-3.0/src/: Makefile.am  bread.c  libbreadcrust.c
examples/foo-1.0/: Makefile  foo
examples/foo-1.0/SRP_files/: NOTES-2  NOTES-dev  OWNEROVERRIDE-2  PREPOSTLIB_2.py  PREPOSTLIB_docs.py
examples/foo-1.0/docs/: docs1
examples/foo-2.0/: Makefile
examples/foo-2.0/SRP_files/: NOTES-dev  NOTES-doc
examples/foo-2.0/docs/: docs3
examples/foo-3.0/: Makefile.am  Makefile.old  README  README.in  configure.ac  srp-example-foo-functions-multi.notes  srp-example-foo-functions.notes  srp-example-foo.notes  srp-example-functions-multi.notes  srp-example-functions.notes  srp-example.notes
examples/foo-3.0/SRP_files/: NOTES  go  go-doc  overrides  test.py  voodoo.py  voodoo2.py
examples/foo-3.0/docs/: Makefile.am
examples/foo-3.0/headers/: Makefile.am  pizzacrust.h
examples/foo-3.0/src/: Makefile.am  foo.cpp  libcrust.c  libpizzacrust.c  pizza.c  pizza.cpp
m4/: python.m4
python-test.d/: check-tarfile-module.py
src/: Makefile.am  functions  srp
src/modules/: Makefile.am  NOTES  NOTES2  NOTES3  NOTES4  NOTES6  NOTES7  setup.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py
src/modules/srp/: Makefile.am  __init__.py  blob.c  blob.py  cli.py  config.py  config.py.in  core.py  db.py  notes.py  toc.py  utils.py
src/modules/srp/features/: Makefile.am  __init__.py  checksum.py  core.py  deps.py  perms.py  postinstall.py  size.py  strip_debug.py  strip_docs.py  trackfiles.py
