AC_PREREQ([2.68])
AC_INIT([srp-example], [3.0.0], [michael.d.labriola@gmail.com])
AC_CONFIG_SRCDIR([src/foo.cpp])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE(dist-bzip2 no-dist-gzip)

AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MKDIR_P
AC_PROG_LN_S

AC_CONFIG_FILES([Makefile \
		 src/Makefile \
		 docs/Makefile \
		 headers/Makefile])

AC_OUTPUT
