SUBDIRS =
SUBDIRS += srp

# NOTE: I'm intentionally not including all the NOTES and test test.py
#       scripts in dist.  They're mostly just rambling comments to myself
#       and test scripts.  They will either get removed or tidied up and
#       added to dist later.
#
# FIXME: clean up.  what about blob.c?
