featuresdir = $(pkgpyexecdir)/features

features_PYTHON =
features_PYTHON += __init__.py
features_PYTHON += checksum.py
features_PYTHON += core.py
features_PYTHON += deps.py
features_PYTHON += perms.py
features_PYTHON += postinstall.py
features_PYTHON += size.py
features_PYTHON += strip_debug.py
features_PYTHON += strip_docs.py
